package com.directi.training.ocp.exercise.refactored;

public class timeslot extends slot {
    @Override
    public  void markSlotFree(int resourceId){

    }
    @Override
    public  int findFreeSlot(){
        return 0;

    }
    @Override
    public  void markSlotBusy(int resourceId){

    }    
}
